--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "gulp devTask",
+    "build": "gulp buildTask"
   },
   "keywords": [],
   "author": "",
@@ -12,11 +13,13 @@
   "devDependencies": {
     "@babel/core": "^7.13.15",
     "@babel/preset-env": "^7.13.15",
+    "browser-sync": "^2.26.14",
     "del": "^6.0.0",
     "gulp": "^4.0.2",
     "gulp-babel": "^8.0.0",
     "gulp-htmlmin": "^5.0.1",
     "gulp-imagemin": "^7.1.0",
+    "gulp-inject": "^5.0.5",
     "gulp-less": "^4.0.1",
     "gulp-minify-css": "^1.2.4",
     "gulp-postcss": "^9.0.0",
